GeekoDoc Makefile: Use sed everywhere, clean up flat RNG
Cleaning up the flat RNG is recommended by the README

--- a/schema/GeekoDoc/rng/0.9/Makefile
+++ b/schema/GeekoDoc/rng/0.9/Makefile
@@ -23,10 +23,14 @@ docbook.rnc: /usr/share/xml/docbook/schema/rng/5.1/docbookxi.rnc
 geekodoc5.rng: docbookxi.rnc geekodoc5.rnc
 	@echo "* Converting $< -> $@"
 	trang $< $@
+	@sed -i -r 's/\s+//' $@
 
 geekodoc5-flat.rng: geekodoc5.rng
 	@echo "* Flattening $< -> $@"
-	rnginline $< $@
+	rnginline $< $@.unclean
+	xmllint -o $@.unclean --nsclean --format $@
+	@rm $@.unclean
+	@sed -i -r 's/\s+//' $@
 
 geekodoc5-flat.rnc: geekodoc5-flat.rng
 	@echo "* Converting $< -> $@"
