GeekoDoc Makefile: Add a make target called 'flat'
Gives you just the flat RNC and cleans up everything else.

--- a/schema/GeekoDoc/rng/0.9/Makefile
+++ b/schema/GeekoDoc/rng/0.9/Makefile
@@ -10,11 +10,14 @@
 # * python3-rnginline (from obs://home:thomas-schraitle/python3-rnginline)
 
 
-.PHONY: all clean
+.PHONY: all clean flat
 all: geekodoc5-flat.rnc
 
 clean:
 	rm geekodoc5-flat.rn{c,g} geekodoc5.rng docbook.rn{c,g} 2>/dev/null || true
+
+flat: geekodoc5-flat.rnc
+	rm geekodoc5{,-flat}.rng docbook.rn{c,g} 2>/dev/null || true
 
 docbook.rnc: /usr/share/xml/docbook/schema/rng/5.1/docbookxi.rnc
 	@echo "* Linking $< -> $@"
@@ -29,7 +32,7 @@ geekodoc5-flat.rng: geekodoc5.rng
 	@echo "* Flattening $< -> $@"
 	rnginline $< $@.unclean
 	xmllint -o $@.unclean --nsclean --format $@
-	@rm $@.unclean
+	rm $@.unclean
 	@sed -i -r 's/\s+//' $@
 
 geekodoc5-flat.rnc: geekodoc5-flat.rng
