--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,9 @@ before_install:
     - sudo apt-get update
     - sudo apt-get install -y jing
 
-# install:
-#    - echo "Installation complete"
+install:
+    - xmlcatalog /etc/xml/catalog "http://docbook.sourceforge.net/release/xsl/current/common/entities.ent" 
+    - xmlcatalog /etc/xml/catalog "http://docbook.sourceforge.net/release/xsl/current/xhtml/docbook.xsl"
 
 script:
     - ./tests/validate-xslt
