--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,11 @@ env:
 before_install:
     - sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu/ precise main universe restricted multiverse"
     - sudo apt-get update
-    - sudo apt-get install -y jing
+    - sudo apt-get install -y jing xml-core libxml2-utils docbook docbook-xsl
 
-# install:
-#    - echo "Installation complete"
+install:
+    - xmlcatalog /etc/xml/catalog "http://docbook.sourceforge.net/release/xsl/current/common/entities.ent" 
+    - xmlcatalog /etc/xml/catalog "http://docbook.sourceforge.net/release/xsl/current/xhtml/docbook.xsl"
 
 script:
     - ./tests/validate-xslt
