--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,15 @@ cache: apt
 env:
     global:
         - PATH=".:$PATH"
-        - LD_PRELOAD=/lib/x86_64-linux-gnu/libSegFault.so  
+        - LD_PRELOAD=/lib/x86_64-linux-gnu/libSegFault.so
 
 before_install:
-    - sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu/ precise main universe restricted multiverse"
+    - sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu/ bionic main universe"
     - sudo apt-get update
-    - sudo apt-get install -y jing xml-core libxml2-utils docbook docbook-xsl
+    - sudo apt-get install -y jing libbatik-java libavalon-framework-java xml-core libxml2-utils docbook docbook-xsl
 
 install:
-    - xmlcatalog /etc/xml/catalog "http://docbook.sourceforge.net/release/xsl/current/common/entities.ent" 
+    - xmlcatalog /etc/xml/catalog "http://docbook.sourceforge.net/release/xsl/current/common/entities.ent"
     - xmlcatalog /etc/xml/catalog "http://docbook.sourceforge.net/release/xsl/current/xhtml/docbook.xsl"
 
 script:
@@ -25,3 +25,8 @@ script:
 branches:
     except:
         - gh-pages
+
+notifications:
+  email:
+    on_success: change
+    on_failure: always
