--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,12 +3,11 @@ name: suse-xsl CI
 
 on:
   push:
-    branches:
-      - main
-      - "!gh-pages"
+    branches-ignore:
+      - gh-pages
   pull_request:
-    branches:
-      - main
+    branches-ignore:
+      - gh-pages
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
