Revert "Try validation *without* -j (parallel)"
This reverts commit 0a4ef8f010da4d3b4876de3f885e48818a01a5d1.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,4 +57,4 @@ jobs:
           xmlcatalog /etc/xml/catalog "$DBXSL/xhtml/docbook.xsl"
 
       - name: Validate
-        run: ./tests/validate-xslt 
+        run: ./tests/validate-xslt -j
